allow defining more dynamic blockstates